crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__unintelligible-with-embedded.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Timmy",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Linda",
            "role": "Investigator",
            "speaker_code": "LIN"
          },
          {
            "name": "Winnie",
            "role": "Investigator",
            "speaker_code": "WIN"
          },
          {
            "name": "Gemma",
            "role": "Speaker",
            "speaker_code": "GEM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "location": "TI060 (side A)",
        "type": "tape_location"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "29-FEB-1996",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "duration": "17:30-18:00",
        "type": "time_duration"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Make sure xxx is recognized even with embedded characters",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "xxx",
                  "type": "text"
                }
              ],
              "raw_text": "xxx",
              "span": {
                "end": 448,
                "start": 445
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 451,
                "start": 449
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "my",
                  "type": "text"
                }
              ],
              "raw_text": "my",
              "span": {
                "end": 454,
                "start": 452
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "x",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "top_overlap_begin"
                  },
                  "type": "overlappoint"
                },
                {
                  "content": "xx",
                  "type": "text"
                },
                {
                  "content": {
                    "marker": "top_overlap_end"
                  },
                  "type": "overlappoint"
                }
              ],
              "raw_text": "x⌈xx⌉",
              "span": {
                "end": 464,
                "start": 455
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "and",
                  "type": "text"
                }
              ],
              "raw_text": "and",
              "span": {
                "end": 468,
                "start": 465
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 472,
                "start": 469
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 475,
                "start": 473
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "my",
                  "type": "text"
                }
              ],
              "raw_text": "my",
              "span": {
                "end": 478,
                "start": 476
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "yyy",
                  "type": "text"
                }
              ],
              "raw_text": "yyy",
              "span": {
                "end": 482,
                "start": 479
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;09.08",
        "corpus": "timmy",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Timmy",
      "role": "Target_Child"
    },
    "GEM": {
      "birth_date": null,
      "code": "GEM",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Speaker",
        "speaker": "GEM"
      },
      "name": "Gemma",
      "role": "Speaker"
    },
    "LIN": {
      "birth_date": null,
      "code": "LIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LIN"
      },
      "name": "Linda",
      "role": "Investigator"
    },
    "WIN": {
      "birth_date": null,
      "code": "WIN",
      "id": {
        "corpus": "timmy",
        "language": "eng",
        "role": "Investigator",
        "speaker": "WIN"
      },
      "name": "Winnie",
      "role": "Investigator"
    }
  }
}
