crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__unscoped1.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Kelly",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Nicolette",
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "overlap",
                        "type": "text"
                      }
                    ],
                    "raw_text": "overlap",
                    "span": {
                      "end": 184,
                      "start": 177
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "with",
                        "type": "text"
                      }
                    ],
                    "raw_text": "with",
                    "span": {
                      "end": 189,
                      "start": 185
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "comment",
                        "type": "text"
                      }
                    ],
                    "raw_text": "comment",
                    "span": {
                      "end": 197,
                      "start": 190
                    },
                    "type": "word"
                  },
                  {
                    "text": "comment",
                    "type": "freecode"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "type": "overlap_end"
                }
              ],
              "type": "annotated_group"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Nicolette",
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Kelly",
      "role": "Mother"
    }
  }
}
