crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__uptake-and-special.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Speaker",
            "speaker_code": "SPK"
          },
          {
            "name": null,
            "role": "Adult",
            "speaker_code": "LSN"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Uptake continuation, CA continuation markers, CA special",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: uptake_symbol, ca_continuation_marker,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "unmarked_ending (missing terminator in CA)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "didn't",
              "content": [
                {
                  "content": "didn't",
                  "type": "text"
                }
              ],
              "raw_text": "didn't",
              "type": "word"
            },
            {
              "cleaned_text": "give",
              "content": [
                {
                  "content": "give",
                  "type": "text"
                }
              ],
              "raw_text": "give",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            },
            {
              "cleaned_text": "anything",
              "content": [
                {
                  "content": "anything",
                  "type": "text"
                }
              ],
              "raw_text": "anything",
              "type": "word"
            },
            {
              "cleaned_text": "today",
              "content": [
                {
                  "content": "today",
                  "type": "text"
                }
              ],
              "raw_text": "today",
              "type": "word"
            },
            {
              "kind": "uptake",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "kind": "uptake",
              "type": "separator"
            },
            {
              "cleaned_text": "nothing",
              "content": [
                {
                  "content": "nothing",
                  "type": "text"
                }
              ],
              "raw_text": "nothing",
              "type": "word"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            },
            {
              "cleaned_text": "adds",
              "content": [
                {
                  "content": "adds",
                  "type": "text"
                }
              ],
              "raw_text": "adds",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "we",
              "content": [
                {
                  "content": "we",
                  "type": "text"
                }
              ],
              "raw_text": "we",
              "type": "word"
            },
            {
              "cleaned_text": "had",
              "content": [
                {
                  "content": "had",
                  "type": "text"
                }
              ],
              "raw_text": "had",
              "type": "word"
            },
            {
              "cleaned_text": "earlier",
              "content": [
                {
                  "content": "earlier",
                  "type": "text"
                }
              ],
              "raw_text": "earlier",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "right",
              "content": [
                {
                  "content": "right",
                  "type": "text"
                }
              ],
              "raw_text": "right",
              "type": "word"
            },
            {
              "kind": "uptake",
              "type": "separator"
            }
          ]
        },
        "speaker": "SPK"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "kind": "uptake",
              "type": "separator"
            },
            {
              "cleaned_text": "his",
              "content": [
                {
                  "content": "his",
                  "type": "text"
                }
              ],
              "raw_text": "his",
              "type": "word"
            },
            {
              "cleaned_text": "counsel",
              "content": [
                {
                  "content": "counsel",
                  "type": "text"
                }
              ],
              "raw_text": "counsel",
              "type": "word"
            },
            {
              "cleaned_text": "says",
              "content": [
                {
                  "content": "says",
                  "type": "text"
                }
              ],
              "raw_text": "says",
              "type": "word"
            },
            {
              "cleaned_text": "he",
              "content": [
                {
                  "content": "he",
                  "type": "text"
                }
              ],
              "raw_text": "he",
              "type": "word"
            },
            {
              "cleaned_text": "will",
              "content": [
                {
                  "content": "will",
                  "type": "text"
                }
              ],
              "raw_text": "will",
              "type": "word"
            },
            {
              "cleaned_text": "not",
              "content": [
                {
                  "content": "not",
                  "type": "text"
                }
              ],
              "raw_text": "not",
              "type": "word"
            },
            {
              "cleaned_text": "permit",
              "content": [
                {
                  "content": "permit",
                  "type": "text"
                }
              ],
              "raw_text": "permit",
              "type": "word"
            },
            {
              "cleaned_text": "him",
              "content": [
                {
                  "content": "him",
                  "type": "text"
                }
              ],
              "raw_text": "him",
              "type": "word"
            },
            {
              "cleaned_text": "to",
              "content": [
                {
                  "content": "to",
                  "type": "text"
                }
              ],
              "raw_text": "to",
              "type": "word"
            },
            {
              "cleaned_text": "plead",
              "content": [
                {
                  "content": "plead",
                  "type": "text"
                }
              ],
              "raw_text": "plead",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "LSN"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [
    "CA"
  ],
  "participants": {
    "LSN": {
      "birth_date": null,
      "code": "LSN",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Adult",
        "speaker": "LSN"
      },
      "name": null,
      "role": "Adult"
    },
    "SPK": {
      "birth_date": null,
      "code": "SPK",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Speaker",
        "speaker": "SPK"
      },
      "name": null,
      "role": "Speaker"
    }
  }
}
