crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__url-no-multi.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "url-no-multi",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "bullets in an utterance",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 2043655,
            "start_ms": 2043654
          },
          "content": [
            {
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "span": {
                "end": 225,
                "start": 222
              },
              "type": "word"
            },
            {
              "end_ms": 2042652,
              "start_ms": 2041689,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "two",
                  "type": "text"
                }
              ],
              "raw_text": "two",
              "span": {
                "end": 248,
                "start": 245
              },
              "type": "word"
            },
            {
              "end_ms": 2043653,
              "start_ms": 2042652,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "three",
                  "type": "text"
                }
              ],
              "raw_text": "three",
              "span": {
                "end": 273,
                "start": 268
              },
              "type": "word"
            },
            {
              "end_ms": 2043654,
              "start_ms": 2043653,
              "type": "internal_bullet"
            },
            {
              "content": [
                {
                  "content": "end",
                  "type": "text"
                }
              ],
              "raw_text": "end",
              "span": {
                "end": 296,
                "start": 293
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
